--- a/footer.html
+++ b/footer.html
@@ -7,10 +7,33 @@
     <!-- Incluye Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        body {
+            display: flex;
+            flex-direction: column;
+        }
+
+        main {
+            flex: 1;
+        }
+
         footer {
-            background-color: #333;
-            color: white;
+            background-color: #111;
+            color: #ddd;
             padding: 40px 20px;
+            font-family: Arial, sans-serif;
+            position: relative;
+            width: 100%;
+        }
+
+        .footer-top {
+            border-bottom: 1px solid #444;
+            padding-bottom: 20px;
         }
 
         .footer-content {
@@ -26,43 +49,35 @@
         }
 
         .footer-section h5 {
-            border-bottom: 2px solid #f4f4f4;
-            font-size: 1.8em;
+            border-bottom: 2px solid #888;
+            font-size: 1.4em;
             padding-bottom: 10px;
-            margin-bottom: 20px;
+            margin-bottom: 15px;
+            color: #fff;
         }
 
         .footer-section p {
             margin: 10px 0;
         }
 
-        .footer-section ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        .footer-section ul li {
-            margin: 10px 0;
-        }
-
-        .footer-section ul li a {
+        .footer-section a {
             color: #ddd;
             text-decoration: none;
+            transition: color 0.3s ease;
         }
 
-        .footer-section ul li a:hover {
+        .footer-section a:hover {
+            color: #fff;
             text-decoration: underline;
         }
 
         .social-icon {
             display: block;
-            margin: 5px;
+            margin: 5px 0;
         }
 
         .social-media a {
             margin-right: 15px;
-            color: #ddd;
-            text-decoration: none;
             display: flex;
             align-items: center;
         }
@@ -71,49 +86,66 @@
             margin-right: 8px;
         }
 
-        .social-media a:hover {
-            text-decoration: underline;
+        .help p {
+            margin: 5px 0;
         }
 
         .footer-bottom {
             text-align: center;
-            margin-top: 20px;
+            padding-top: 20px;
+            border-top: 1px solid #444;
+        }
+
+        .footer-bottom p {
+            margin: 10px 0;
         }
 
         .footer-bottom a {
             color: #ddd;
             text-decoration: none;
+            transition: color 0.3s ease;
         }
 
         .footer-bottom a:hover {
+            color: #fff;
             text-decoration: underline;
         }
     </style>
 </head>
 <body>
+    <main>
+        <!-- Aquí va el contenido principal de tu página -->
+    </main>
     <footer>
-        <div class="footer-content">
-            <div class="footer-section about">
-                <h5>Sobre Nosotros</h5>
-                <p>Mi Tienda Online es tu destino para las mejores ofertas en moda y accesorios. Estamos comprometidos a ofrecerte una experiencia de compra única y productos de alta calidad.</p>
-            </div>
-            <div class="footer-section contact">
-                <h5>Contacto</h5>
-                <p>Teléfono: +123 456 7890</p>
-                <p>Email: <a href="mailto:contacto@mitiendaonline.com">contacto@mitiendaonline.com</a></p>
-            </div>
-            <div class="footer-section social-media">
-                <h5>Síguenos</h5>
-                <a href="https://facebook.com" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i> Facebook</a>
-                <a href="https://instagram.com" target="_blank" class="social-icon"><i class="fab fa-instagram"></i> Instagram</a>
-                <a href="https://twitter.com" target="_blank" class="social-icon"><i class="fab fa-twitter"></i> Twitter</a>
-                <a href="https://linkedin.com" target="_blank" class="social-icon"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
+        <div class="footer-top">
+            <div class="footer-content">
+                <div class="footer-section about">
+                    <h5>Sobre Nosotros</h5>
+                    <p>Mi Tienda Online es tu destino para las mejores ofertas en moda y accesorios. Estamos comprometidos a ofrecerte una experiencia de compra única y productos de alta calidad.</p>
+                </div>
+                <div class="footer-section help">
+                    <h5>Ayuda</h5>
+                    <p><a href="#faq">Preguntas Frecuentes</a></p>
+                    <p><a href="#soporte">Soporte Técnico</a></p>
+                    <p><a href="#envios">Política de Envíos</a></p>
+                </div>
+                <div class="footer-section contact">
+                    <h5>Contacto</h5>
+                    <p>Teléfono: +11 41929678</p>
+                    <p>Email: <a href="mailto:contacto@mitiendaonline.com">contacto@mitiendaonline.com</a></p>
+                </div>
+                <div class="footer-section social-media">
+                    <h5>Síguenos</h5>
+                    <a href="https://facebook.com" target="_blank" class="social-icon"><i class="fab fa-facebook-f"></i> Facebook</a>
+                    <a href="https://instagram.com" target="_blank" class="social-icon"><i class="fab fa-instagram"></i> Instagram</a>
+                    <a href="https://twitter.com" target="_blank" class="social-icon"><i class="fab fa-twitter"></i> Twitter</a>
+                    <a href="https://linkedin.com" target="_blank" class="social-icon"><i class="fab fa-linkedin-in"></i> LinkedIn</a>
+                </div>
             </div>
         </div>
         <div class="footer-bottom">
             <p>&copy; 2024 Mi Tienda Online. Todos los derechos reservados.</p>
-            <p><a href="#">Términos y Condiciones</a></p>
-            <a href="#">Política de Privacidad</a>
+            <p><a href="#">Términos y Condiciones</a> | <a href="#">Política de Privacidad</a></p>
         </div>
     </footer>
 </body>
