--- a/footer.html
+++ b/footer.html
@@ -25,15 +25,16 @@
         footer {
             background-color: #111;
             color: #ddd;
-            padding: 40px 20px;
+            padding: 20px;
             font-family: Arial, sans-serif;
             position: relative;
             width: 100%;
+            bottom: 0;
         }
 
         .footer-top {
             border-bottom: 1px solid #444;
-            padding-bottom: 20px;
+            padding-bottom: 10px;
         }
 
         .footer-content {
@@ -44,20 +45,21 @@
 
         .footer-section {
             flex: 1;
-            min-width: 200px;
-            margin-right: 20px;
+            min-width: 150px;
+            margin-right: 15px;
         }
 
         .footer-section h5 {
-            border-bottom: 2px solid #888;
-            font-size: 1.4em;
-            padding-bottom: 10px;
-            margin-bottom: 15px;
+            border-bottom: 1px solid #888;
+            font-size: 1.2em;
+            padding-bottom: 5px;
+            margin-bottom: 10px;
             color: #fff;
         }
 
         .footer-section p {
-            margin: 10px 0;
+            margin: 5px 0;
+            font-size: 14px;
         }
 
         .footer-section a {
@@ -77,27 +79,25 @@
         }
 
         .social-media a {
-            margin-right: 15px;
+            margin-right: 10px;
             display: flex;
             align-items: center;
+            font-size: 14px;
         }
 
         .social-media i {
-            margin-right: 8px;
-        }
-
-        .help p {
-            margin: 5px 0;
+            margin-right: 6px;
         }
 
         .footer-bottom {
             text-align: center;
-            padding-top: 20px;
+            padding-top: 10px;
             border-top: 1px solid #444;
         }
 
         .footer-bottom p {
-            margin: 10px 0;
+            margin: 5px 0;
+            font-size: 14px;
         }
 
         .footer-bottom a {
