--- a/login.html
+++ b/login.html
@@ -3,40 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <title>Iniciar Sesión</title>
-    <style>
-        .login-container {
-            width: 300px;
-            margin: auto;
-            padding: 20px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        .form-group {
-            margin-bottom: 15px;
-        }
-        .form-group label {
-            display: block;
-            margin-bottom: 5px;
-        }
-        .form-group input {
-            width: 100%;
-            padding: 8px;
-            box-sizing: border-box;
-        }
-        input[type="submit"] {
-            width: 100%;
-            padding: 10px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        input[type="submit"]:hover {
-            background-color: #0056b3;
-        }
-    </style>
+<style>
+
+/* Contenedor del Formulario */
+body {
+    font-family: Arial, sans-serif;
+    //display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color: #f0f0f0;
+}
+.login-container {
+    max-width: 360px;
+    margin: 40px auto;
+    padding: 20px;
+    border: 1px solid #000;
+    border-radius: 4px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+    background-color: #fff;
+}
+
+/* Agrupación de Formulario */
+.form-group {
+    margin-bottom: 20px;
+}
+
+/* Etiquetas de los Campos */
+.form-group label {
+    display: block;
+    margin-bottom: 8px;
+    font-size: 14px;
+    color: #000;
+}
+
+/* Campos de Entrada */
+.form-group input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #000;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-size: 14px;
+    color: #000;
+    background-color: #fff;
+}
+
+/* Campo de Entrada en Foco */
+.form-group input:focus {
+    border-color: #555;
+    outline: none;
+}
+
+/* Botón de Envío */
+input[type="submit"] {
+    width: 100%;
+    padding: 10px;
+    background-color: #000;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+/* Botón de Envío en Hover */
+input[type="submit"]:hover {
+    background-color: #333;
+}
+</style>
 </head>
 <body>
     <div class="login-container">
