--- a/login.html
+++ b/login.html
@@ -2,21 +2,23 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Iniciar Sesión</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FDEX - Iniciar Sesión</title>
 <style>
-
-/* Contenedor del Formulario */
+/* Estilo Global */
 body {
     font-family: Arial, sans-serif;
-    //display: flex;
+    display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     margin: 0;
     background-color: #f0f0f0;
 }
+
+/* Contenedor del Formulario */
 .login-container {
-    max-width: 360px;
+    width: 360px;
     margin: 40px auto;
     padding: 20px;
     border: 1px solid #000;
@@ -25,9 +27,17 @@ body {
     background-color: #fff;
 }
 
+/* Título */
+h2 {
+    font-size: 24px;
+    margin-bottom: 20px;
+    color: #333;
+}
+
 /* Agrupación de Formulario */
 .form-group {
     margin-bottom: 20px;
+    text-align: left;
 }
 
 /* Etiquetas de los Campos */
@@ -60,7 +70,7 @@ body {
 input[type="submit"] {
     width: 100%;
     padding: 10px;
-    background-color: #000;
+    background-color: #e85d04;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -71,8 +81,26 @@ input[type="submit"] {
 
 /* Botón de Envío en Hover */
 input[type="submit"]:hover {
-    background-color: #333;
+    background-color: #c84e01;
 }
+
+/* Enlace para Registrarse */
+.signup-link {
+    display: block;
+    margin-top: 20px;
+    font-size: 14px;
+    color: #333;
+}
+
+.signup-link a {
+    color: #007bff;
+    text-decoration: none;
+}
+
+.signup-link a:hover {
+    text-decoration: underline;
+}
+
 </style>
 </head>
 <body>
@@ -80,8 +108,8 @@ input[type="submit"]:hover {
         <h2>Iniciar Sesión</h2>
         <form id="loginForm" action="login.php" method="POST">
             <div class="form-group">
-                <label for="username">Nombre de usuario</label>
-                <input type="text" id="username" name="username" required>
+                <label for="username">Nombre</label>
+                <input type="username" id="username" name="username" required>
             </div>
             <div class="form-group">
                 <label for="password">Contraseña</label>
@@ -89,6 +117,9 @@ input[type="submit"]:hover {
             </div>
             <input type="submit" value="Iniciar Sesión">
         </form>
+        <div class="signup-link">
+            ¿No tienes una cuenta? <a href="registro.html">Regístrate</a>
+        </div>
     </div>
 </body>
 </html>
