--- a/registro.html
+++ b/registro.html
@@ -5,83 +5,107 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de Usuario</title>
     <style>
-   /* Estilo Global */
-body {
-    font-family: Arial, sans-serif;
-    //display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    background-color: #f0f0f0;
-}
+    /* Estilo Global */
+    body {
+        font-family: Arial, sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+        background-color: #f0f0f0;
+    }
 
-/* Contenedor del Formulario */
-.register-container {
-    max-width: 360px;
-    margin: 40px auto;
-    padding: 20px;
-    border: 1px solid #000;
-    border-radius: 4px;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
-    background-color: #fff;
-}
+    /* Contenedor del Formulario */
+    .login-container {
+        width: 360px;
+        margin: 40px auto;
+        padding: 20px;
+        border: 1px solid #000;
+        border-radius: 4px;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+        background-color: #fff;
+    }
 
-/* Agrupación de Formulario */
-.form-group {
-    margin-bottom: 20px;
-    text-align: left;
-}
+    /* Título */
+    h2 {
+        font-size: 24px;
+        margin-bottom: 20px;
+        color: #333;
+    }
 
-/* Etiquetas de los Campos */
-.form-group label {
-    display: block;
-    margin-bottom: 8px;
-    font-size: 14px;
-    color: #000;
-}
+    /* Agrupación de Formulario */
+    .form-group {
+        margin-bottom: 20px;
+        text-align: left;
+    }
 
-/* Campos de Entrada */
-.form-group input {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #000;
-    border-radius: 4px;
-    box-sizing: border-box;
-    font-size: 14px;
-    color: #000;
-    background-color: #fff;
-}
+    /* Etiquetas de los Campos */
+    .form-group label {
+        display: block;
+        margin-bottom: 8px;
+        font-size: 14px;
+        color: #000;
+    }
 
-/* Campo de Entrada en Foco */
-.form-group input:focus {
-    border-color: #555;
-    outline: none;
-}
+    /* Campos de Entrada */
+    .form-group input {
+        width: 100%;
+        padding: 10px;
+        border: 1px solid #000;
+        border-radius: 4px;
+        box-sizing: border-box;
+        font-size: 14px;
+        color: #000;
+        background-color: #fff;
+    }
 
-/* Botón de Envío */
-input[type="submit"] {
-    width: 100%;
-    padding: 10px;
-    background-color: #000;
-    color: #fff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 14px;
-    font-weight: bold;
-}
+    /* Campo de Entrada en Foco */
+    .form-group input:focus {
+        border-color: #555;
+        outline: none;
+    }
 
-/* Botón de Envío en Hover */
-input[type="submit"]:hover {
-    background-color: #333;
-}
+    /* Botón de Envío */
+    input[type="submit"] {
+        width: 100%;
+        padding: 10px;
+        background-color: #e85d04;
+        color: #fff;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        font-size: 14px;
+        font-weight: bold;
+    }
+
+    /* Botón de Envío en Hover */
+    input[type="submit"]:hover {
+        background-color: #c84e01;
+    }
+
+    /* Enlace para Registrarse */
+    .signup-link {
+        display: block;
+        margin-top: 20px;
+        font-size: 14px;
+        color: #333;
+    }
+
+    .signup-link a {
+        color: #007bff;
+        text-decoration: none;
+    }
+
+    .signup-link a:hover {
+        text-decoration: underline;
+    }
 
     </style>
 </head>
 <body>
 
-<div class="register-container">
+<div class="login-container">
     <h2>Registro de Usuario</h2>
     <form action="registro.php" method="POST">
         <div class="form-group">
@@ -98,6 +122,9 @@ input[type="submit"]:hover {
         </div>
         <input type="submit" value="Registrar">
     </form>
+    <div class="signup-link">
+        ¿Ya tienes una cuenta? <a href="login.html">Inicia Sesion</a>
+    </div>
 </div>
 
 </body>
