Mercado Pago y pulido de detalles

--- a/registro.html
+++ b/registro.html
@@ -123,7 +123,7 @@
         <input type="submit" value="Registrar">
     </form>
     <div class="signup-link">
-        ¿Ya tienes una cuenta? <a href="login.html">Inicia Sesion</a>
+        ¿Ya tienes una cuenta? <a href="login.html">Inicia Sesión</a>
     </div>
 </div>
 
